Removed unnecessary boxing occurrences.